# SemanticChaosBench

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_GOOGLE_STUDIO.md  CLAUDE.md  GOOGLE_AI_STUDIO_SETUP.md  QUICKSTART.md  README.md  Toms_Notes.md  config.yaml  pyproject.toml  semantic_divergence_bench.md
data/prompt_pairs/: test_pairs.json
scripts/: analyze_results.py  demo_divergence_with_models.py  demo_phase1.py  generate_prompt_pairs.py  pilot_study.py  run_benchmark.py  run_scripts.py  test_divergence.py  test_embeddings_and_perturbation.py  test_google_api.py  test_model_interface.py  test_setup.py
scripts/demos/: demo_divergence_with_models.py  demo_phase1.py
scripts/tests/: test_caching.py  test_divergence.py  test_embeddings_and_perturbation.py  test_google_api.py  test_model_interface.py  test_setup.py
src/: __init__.py
src/analysis/: __init__.py  metrics.py  statistics.py  visualization.py
src/measurement/: __init__.py  divergence.py  embeddings.py  trajectories.py
src/models/: __init__.py  anthropic_wrapper.py  base_model.py  google_wrapper.py  openai_wrapper.py  replicate_wrapper.py  together_wrapper.py
src/perturbation/: __init__.py  paraphrase_generator.py  prompt_pairs.py  semantic_filter.py
src/utils/: __init__.py  api_helpers.py  cache.py  config.py  logging.py
tests/: __init__.py
